Try component props

--- a/content/1.introduction/_dir.yml
+++ b/content/1.introduction/_dir.yml
@@ -1,4 +1,7 @@
 icon: ph:star-duotone
 navigation.redirect: /introduction/getting-started
 title: "Введение"
-navigation.title: 'Введение'
+navigation: {
+              title: '123',
+              description: '123',
+}
